backend/mobipay_backend/src/main/java/com/example/mobipay/domain/postpayments/error/InvalidCardNoException.java
package com.example.mobipay.domain.postpayments.error;

public class InvalidCardNoException extends RuntimeException {

    public InvalidCardNoException() {
    }

    public InvalidCardNoException(String message) {
        super(message);
    }

    @Override
    public synchronized Throwable fillInStackTrace() {
        return this;
    }

}
